--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www && node ./public/modules/Assignment2/uiRouterProject/uiRouterServer.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
